# biohub

./: .gitignore  main.py  pyproject.toml
biohub/conf/general/: conf.toml  constant.py
biohub/conf/pipelines/: bacterialannotation.json
biohub/container/: __init__.py  biohub_container.py
biohub/container/database/: database.py
biohub/container/project/: project.py
biohub/container/subject/: subject.py
biohub/core/: biohub_class.py
biohub/database/: __init__.py  database.py
biohub/file/: __init__.py  file.py
biohub/file/format/: __init__.py  xml.py
biohub/folder/: __init__.py  folder.py
biohub/pipeline/: __init__.py  pipeline.py
biohub/pipeline/apps/: __init__.py
biohub/process/: __init__.py  process.py
biohub/process/align/: __init__.py  blastn.py
biohub/process/annotation/: __init__.py  mlst.py  resfinder.py
biohub/process/assembly/: __init__.py  unicycler.py
biohub/process/controller/: subject2subject.py
biohub/process/map/: __init__.py
biohub/process/modules/: __init__.py  build.py  ckeck.py  clone.py  commands.py  evaluation.py  implementation.py  inputs.py  options.py  outputs.py  properties.py  save.py  transfer.py  utils.py  xml_methods.py
biohub/process/subtype/: project2project.py  subject2subject.py
biohub/project/: __init__.py  project.py
biohub/storage/: __init__.py
biohub/subject/: __init__.py  subject.py
biohub/utils/: __init__.py  biohub_class.py  biohub_container.py  creators.py  exceptions.py  utils.py
tests/scripts/: conftest.py  test_00_creator.py  test_02_load.py  test_11_trimming.py  test_12_assembly.py
(+128 files in other folders)
