[tool.poetry]
name = "biohub"
version = "0.1.0"
description = ""
authors = ["JuanAntonioMS <b32masaj@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pathlib = "^1.0.1"
rich = "^13.3.1"
pattern = "^3.6.0"
datetime = "^5.0"
pyyaml = "^6.0"
pytest = "^7.2.1"
jschon = "^0.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-q"
testpaths = [
    "tests"
]
